# tangle-pile

./: .gitignore  Dockerfile  README.md  docker-compose.yml  docker-run-unit-tests  notes  pyproject.toml  requirements.txt
pile/: __init__.py  alignment-extract.py  alignment-find.py  alignment_extract.py  assembly_filter_reads.py  bowtie_index.py  defaults.py  fasta.py  posvec_pelt.py  quant_index.py  quant_reads.py  sam-pileup.py  sra-fetch.py  sra_fetch.py  transcriptome-align.py  transcriptome-index.py  transcriptome_align.py  transcriptome_concat.py  transcriptome_find.py  transcriptome_index.py  transcriptome_search.py  transdecoder_to_detected.py
scripts/: mmseqs-cluster-trinity-transcripts
tests/: test_transdecoder_to_detected.py
