[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pile"
version = "0.1.0"
dependencies = [
  "tangle @ git+https://github.com/benjiec/tangle.git@8864093c42b82f7040c16a073909496fefa08c23",
  "matplotlib>=3.10.7",
  "numpy>=1.24.0"
]
description = "Working with NGS RNAseq data"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
]

[tool.setuptools.packages.find]
where = ["."]
