[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pile"
version = "0.1.0"
dependencies = [
  "tangle @ git+https://github.com/benjiec/tangle.git@3632d99",
  "matplotlib>=3.10.7",
  "numpy>=1.24.0",
  "pysam==0.24.0",
  "ruptures==1.1.9",
]
description = "Working with NGS RNAseq data"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
]

[tool.setuptools.packages.find]
where = ["."]
